Autenticando a Vision API Azure

--- a/Reconhecimento_de_imagens_do_twitter/Twitter_API.ipynb
+++ b/Reconhecimento_de_imagens_do_twitter/Twitter_API.ipynb
@@ -1728,14 +1728,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 401
+    },
+    "colab_type": "code",
+    "id": "8-rqKY9qzr1E",
+    "outputId": "36b93ff0-18d7-4c63-d6a5-a3a02fafb9ed"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting azure-cognitiveservices-vision-computervision\n",
+      "  Downloading https://files.pythonhosted.org/packages/03/b4/7034c06e545dc6003987825dcd407d1d1f1f396eaf69bc845ab1597de190/azure_cognitiveservices_vision_computervision-0.4.0-py2.py3-none-any.whl\n",
+      "Collecting azure-common~=1.1 (from azure-cognitiveservices-vision-computervision)\n",
+      "  Downloading https://files.pythonhosted.org/packages/00/55/a703923c12cd3172d5c007beda0c1a34342a17a6a72779f8a7c269af0cd6/azure_common-1.1.23-py2.py3-none-any.whl\n",
+      "Collecting msrest>=0.5.0 (from azure-cognitiveservices-vision-computervision)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/27/b0/c34b3ea9b2ed74b800520fbefb312cdb7f05c20b8bd42e5e7662a5614f98/msrest-0.6.10-py2.py3-none-any.whl (82kB)\n",
+      "\u001b[K     |████████████████████████████████| 92kB 7.2MB/s \n",
+      "\u001b[?25hCollecting isodate>=0.6.0 (from msrest>=0.5.0->azure-cognitiveservices-vision-computervision)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9b/9f/b36f7774ff5ea8e428fdcfc4bb332c39ee5b9362ddd3d40d9516a55221b2/isodate-0.6.0-py2.py3-none-any.whl (45kB)\n",
+      "\u001b[K     |████████████████████████████████| 51kB 24.6MB/s \n",
+      "\u001b[?25hRequirement already satisfied: requests-oauthlib>=0.5.0 in /usr/local/lib/python3.6/dist-packages (from msrest>=0.5.0->azure-cognitiveservices-vision-computervision) (1.2.0)\n",
+      "Requirement already satisfied: requests~=2.16 in /usr/local/lib/python3.6/dist-packages (from msrest>=0.5.0->azure-cognitiveservices-vision-computervision) (2.21.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from msrest>=0.5.0->azure-cognitiveservices-vision-computervision) (2019.6.16)\n",
+      "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from isodate>=0.6.0->msrest>=0.5.0->azure-cognitiveservices-vision-computervision) (1.12.0)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.6/dist-packages (from requests-oauthlib>=0.5.0->msrest>=0.5.0->azure-cognitiveservices-vision-computervision) (3.1.0)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests~=2.16->msrest>=0.5.0->azure-cognitiveservices-vision-computervision) (2.8)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests~=2.16->msrest>=0.5.0->azure-cognitiveservices-vision-computervision) (1.24.3)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests~=2.16->msrest>=0.5.0->azure-cognitiveservices-vision-computervision) (3.0.4)\n",
+      "Installing collected packages: azure-common, isodate, msrest, azure-cognitiveservices-vision-computervision\n",
+      "Successfully installed azure-cognitiveservices-vision-computervision-0.4.0 azure-common-1.1.23 isodate-0.6.0 msrest-0.6.10\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install azure-cognitiveservices-vision-computervision"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "QYVIuAONdifI"
+    "id": "6_lBbfFC0SMv"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from azure.cognitiveservices.vision.computervision import ComputerVisionClient\n",
+    "from msrest.authentication import CognitiveServicesCredentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "x9PdEqG50jOx"
+   },
+   "outputs": [],
+   "source": [
+    "credenciais = CognitiveServicesCredentials(\"231d28866f4f4f8085291bd649922c23\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "I-_f0bKd04P3"
+   },
+   "outputs": [],
+   "source": [
+    "client = ComputerVisionClient(\"https://westcentralus.api.cognitive.microsoft.com\",credenciais)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "kedVhVS91BzS",
+    "outputId": "3011b90f-41cb-4c58-9051-6ff0ceb35f76"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.0'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {
+      "tags": []
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.api_version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "GEwJp_Sq3xE8"
+   },
+   "source": [
+    "![](http://pbs.twimg.com/media/ECx6hK-WwAAPzeE.jpg)"
+   ]
   }
  ],
  "metadata": {
